# RTLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  Memo  conanfile.txt
Archeive/RTLib/Src/Utils/: CMakeLists.txt
Archeive/RTLib/Src/Utils/Src/: Camera.cpp
Archeive/RTLib/Tools/UuidGenerator/: CMakeLists.txt
Ext/: CMakeLists.txt
Ext/CMake/: CMakeLists.txt
Ext/CMake/Install/: all_install.cmake  assimp_install.cmake  directxtex_install.cmake  glfw_install.cmake  gli_install.cmake  glm_install.cmake  json_install.cmake  openexr_install.cmake  sdl3_install.cmake  tinyobjloader_install.cmake  uuid_install.cmake  vma_install.cmake
Ext/CMake/optix-toolkit/: CMakeLists.txt
Ext/CMake/optix-toolkit/Memory/: CMakeLists.txt
Ext/CMake/optix-toolkit/ShaderUtil/: CMakeLists.txt
Ext/Lib/cmake/: assimp_install.cmake  json_install.cmake
Ext/Lib/install/lib/: DirectXTex.lib
Ext/Lib/install/share/directxtex/: directxtex-config-version.cmake
RTLib/: CMakeLists.txt
RTLib/Core/: CMakeLists.txt
RTLib/Core/Include/RTLib/Core/: RTActor.h  RTComponent.h  RTDataType.h  RTObject.h  RTSerialized.h  RTSession.h  RTUuid.h
RTLib/Core/Test/Test0/: CMakeLists.txt
RTLib/Core/Test/Test0/Src/: Test0.cpp
RTLib/Src/: CMakeLists.txt
RTLib/Src/Backends/: CMakeLists.txt
RTLib/Src/Backends/CUDA/Lib/: CMakeLists.txt
RTLib/Src/Backends/GLFW/Lib/: CMakeLists.txt
RTLib/Src/Backends/OGL4/: CMakeLists.txt
RTLib/Src/Backends/OGL4/Lib/: CMakeLists.txt
RTLib/Src/Camera/: CMakeLists.txt
RTLib/Src/Camera/Lib/: CMakeLists.txt
RTLib/Src/Core/: CMakeLists.txt
RTLib/Src/Core/Src/: BinaryReader.cpp  BinaryWriter.cpp  Buffer.cpp  Camera.cpp  Context.cpp  Exceptions.cpp  Image.cpp
RTLib/Src/Core/Test/Src/: RTLibCoreTest.cpp
RTLib/Src/Ext/: CMakeLists.txt
RTLib/Src/Ext/CUDA/: CMakeLists.txt
RTLib/Src/Ext/CUDA/Src/: CUDABuffer.cpp  CUDAContext.cpp  CUDAFunction.cpp  CUDAImage.cpp  CUDAModule.cpp  CUDANatives.cpp  CUDAStream.cpp  CUDATexture.cpp  CUDATypeConversions.h
RTLib/Src/Ext/CUDA/Test/: RTLibExtCUDATestConfig.h.in
RTLib/Src/Ext/CUGL/: CMakeLists.txt
RTLib/Src/Ext/CUGL/Src/: CUGLBuffer.cpp  CUGLContext.cpp
RTLib/Src/Ext/Embree/Test/: CMakeLists.txt
RTLib/Src/Ext/GL/: CMakeLists.txt
RTLib/Src/Ext/GL/Src/: GLBaseObject.h  GLBuffer.cpp  GLContext.cpp  GLContextImpl.h  GLContextState.cpp  GLContextState.h  GLImage.cpp  GLNatives.cpp  GLObjectBase.h  GLProgram.cpp  GLRectRenderer.cpp  GLShader.cpp  GLTexture.cpp  GLTypeConversions.h  GLUniqueIdentifier.h  GLVertexArray.cpp  Test.cpp  TestConfig.h.in
RTLib/Src/Ext/GLFW/: CMakeLists.txt
RTLib/Src/Ext/GLFW/Common/: CMakeLists.txt
RTLib/Src/Ext/GLFW/GL/: CMakeLists.txt
RTLib/Src/Ext/GLFW/Vulkan/: CMakeLists.txt
RTLib/Src/Ext/OPX7/: CMakeLists.txt
RTLib/Src/Ext/OPX7/Src/: OPX7AccelerationStructure.cpp  OPX7Context.cpp  OPX7Module.cpp  OPX7Natives.cpp  OPX7Pipeline.cpp  OPX7ProgramGroup.cpp  OPX7ShaderTable.cpp  OPX7ShaderTableLayout.cpp
RTLib/Src/Inputs/Lib/: CMakeLists.txt
RTLib/Src/Scenes/Test/Test0/: CMakeLists.txt  main.cpp
RTLib/Src/Test/: CMakeLists.txt
RTLib/Src/Utils/Include/: Camera.h
RTLib/Src/Window/Lib/: CMakeLists.txt
RTLib/Test/: CMakeLists.txt
RTLib/Test/Test0/: CMakeLists.txt
RTLib/Test/Test0/Src/: Test0.cpp
RTLib/Test/TestEmbree3/: CMakeLists.txt
RTLib/Test/TestEmbree3/Include/: TestEmbree3.h
RTLib/Test/TestGLFW/: CMakeLists.txt
RTLib/Test/TestGLFW/Common/: CMakeLists.txt
RTLib/Test/TestGLFW/Common/Include/: TestGLFW_Common.h
RTLib/Test/TestGLFW/Common/Src/: main.cpp
RTLib/Test/TestGLFW/GLAD/: CMakeLists.txt
RTLib/Test/TestGLFW/GLAD-ImGui/: CMakeLists.txt
RTLib/Test/TestGLFW/GLAD/Src/: TestGLFW_GLAD.cpp  main.cpp
RTLib/Test/TestGLFW/Include/: TestGLFW.h  TestGLFW_GLAD.h  TestGLFW_Imgui_GLAD.h  TestGLFW_Imgui_Vulkan.h  TestGLFW_Vulkan.h
RTLib/Test/TestGLFW/Src/: TestGLFW.cpp  TestGLFW_GLAD.cpp  TestGLFW_Imgui_GLAD.cpp  TestGLFW_Vulkan.cpp
RTLib/Test/TestGLFW/Vulkan/: CMakeLists.txt
RTLib/Test/TestGLFW/Vulkan/Include/: TestGLFW_Vulkan.h
RTLib/Test/TestGLFW/Vulkan/Src/: TestGLFW_Vulkan.cpp  main.cpp
RTLib/Test/TestLib/: CMakeLists.txt
RTLib/Test/TestLib/Include/: TestAppExtensionData.h  TestAppFreeDelegate.h  TestApplication.h
RTLib/Test/TestLib/Src/: TestAppExtensionData.cpp  TestAppFreeDelegate.cpp  TestAppInitDelegate.cpp  TestApplication.cpp
RTLib/Test/TestOptiX/: CMakeLists.txt
RTLib/Test/TestOptiX/Src/: TestOptiX.cpp
RTLib/Test/TestVulkan/: CMakeLists.txt
RTLib/Test/TestVulkan/Include/: TestVulkan.h
RTLib/Test/TestVulkan/Src/: TestVulkan.cpp
RTLib/Tools/UuidGenerator/Src/: main.cpp
RTLib/cmake/: FindOptiX.cmake
Src/Lib/RTLib/Core/: CMakeLists.txt
Src/Lib/RTLib/Core/Src/: Camera.cpp  Matrix.cpp  Mesh.cpp  Quaternion.cpp  Transform.cpp  (+1 more)
Src/Lib/RTLib/Scene/: CMakeLists.txt
Src/Test/Test0/: CMakeLists.txt
Src/Test/Test0/Include/: Test0_OPX7.h
Src/Test/Test0/Src/: Test0.cpp  Test0_OPX7.cu
Src/Test/Test1/: CMakeLists.txt
Src/Test/Test1/Include/: Test1_Camera.h  Test1_Context.h  Test1_Main.h  Test1_Module.h  Test1_OGL4Renderer.h  Test1_OPX7.h  Test1_Pipeline.h  Test1_PipelineGroup.h  Test1_ProgramGroup.h  Test1_ShaderBindingTable.h
Src/Test/Test1/Src/: Test1_Camera.cpp  Test1_Context.cpp  Test1_Main.cpp  Test1_Module.cpp  Test1_OGL4Renderer.cpp  Test1_OPX7.cu  Test1_Pipeline.cpp  Test1_PipelineGroup.cpp  Test1_ProgramGroup.cpp
Src/Test/Test2/: CMakeLists.txt
Src/Test/Test2/Include/: Test2_Main.h  Test2_OPX7.h
Src/Test/Test2/Src/: Test2_Main.cpp  Test2_OPX7.cu
Src/Test/Test3/: CMakeLists.txt
Src/Test/Test3/Include/: Test3_Main.h  Test3_OPX7.h
Src/Test/Test3/Src/: Test3_Main.cpp  Test3_OPX7.cu
Src/Test/Test4/: CMakeLists.txt
Src/Test/Test4/Include/: Test4_Main.h  Test4_OPX7.h  Test4_Payload.h
Src/Test/Test4/Src/: Test4_Main.cpp  Test4_OPX7.cu
Src/Test/TestLib/: CMakeLists.txt
Src/Test/TestLib/Src/: AccelerationStructure.cpp  CUGL.cpp  Camera.cpp  Context.cpp  Module.cpp  OGL4Renderer.cpp  Pipeline.cpp  PipelineGroup.cpp  ProgramGroup.cpp  ShaderBindingTableLayout.cpp
(+466 files in other folders)
