set(               assimp_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/assimp-5.2               CACHE STRING                "Assimp Config Directory")
set(                glfw3_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/glfw3                    CACHE STRING                 "glfw3 Config Directory")
#set(                  gli_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/gli                      CACHE STRING                   "gli Config Directory")
set(                  glm_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/glm                      CACHE STRING                   "glm Config Directory")
set(                Imath_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/Imath                    CACHE STRING                 "Imath Config Directory")
set(              OpenEXR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/OpenEXR                  CACHE STRING               "OpenEXR Config Directory")
#set(VulkanMemoryAllocator_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/VulkanMemoryAllocator    CACHE STRING "VulkanMemoryAllocator Config Directory")
set(              stduuid_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/stduuid                  CACHE STRING               "stduuid Config Directory")
set(        nlohmann_json_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/share/cmake/nlohmann_json          CACHE STRING         "nlohmann_json Config Directory")
set(           directxtex_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/share/directxtex                   CACHE STRING         "directxtex Config Directory"   )
#set(                 SDL3_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/cmake                              CACHE STRING                  "SDL3 Config Directory")
#set(        tinyobjloader_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/tinyobjloader/cmake            CACHE STRING         "tinyobjloader Config Directory")
set(      boost_smart_ptr_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_smart_ptr-1.82.0       CACHE STRING "Boost Smart Ptr Config Directory")
set(         boost_assert_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_assert-1.82.0          CACHE STRING "Boost Assert Config Directory")
set(         boost_config_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_config-1.82.0          CACHE STRING "Boost Config Config Directory")
set(           boost_core_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_core-1.82.0            CACHE STRING "Boost Core Config Directory")
set(           boost_move_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_move-1.82.0            CACHE STRING "Boost Move Config Directory")
set(  boost_static_assert_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_static_assert-1.82.0   CACHE STRING "Boost Static Assert Config Directory")
set(boost_throw_exception_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_throw_exception-1.82.0 CACHE STRING "Boost Throw Exception Config Directory")
set(    boost_type_traits_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Install/lib/cmake/boost_type_traits-1.82.0     CACHE STRING "Boost Type Traits Config Directory")
add_subdirectory(Lib/glad/cmake glad)
add_subdirectory(CMake)
glad_add_library(glad_gl_core_46 MX API gl:core=4.6 EXTENSIONS GL_ARB_gl_spirv  GL_EXT_texture_compression_s3tc GL_EXT_texture_sRGB GL_EXT_texture_compression_rgtc)

