set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
find_package(CUDAToolkit   REQUIRED)
find_package(OptiX         REQUIRED)
find_package(glad          REQUIRED)
find_package(Vulkan        REQUIRED)
find_package(embree        REQUIRED)
find_package(glfw3         REQUIRED)
find_package(tinyobjloader REQUIRED)
find_package(stb           REQUIRED)
add_subdirectory(Ext )
add_subdirectory(Src )
add_subdirectory(Test)
