set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
find_package(CUDAToolkit   )
find_package(OptiX         )
find_package(Vulkan        REQUIRED)
find_package(embree        REQUIRED)
find_package(glfw3         REQUIRED)
find_package(stb           REQUIRED)
find_package(imgui         REQUIRED)
find_package(OpenEXR       REQUIRED)
find_package(tinyexr       REQUIRED)
find_package(stduuid       REQUIRED)
find_package(nlohmann_json REQUIRED)
add_subdirectory(thirdparty)
add_subdirectory(Src )
add_subdirectory(Tools)
