find_package(CUDAToolkit REQUIRED)
find_package(glad        REQUIRED)
find_package(glfw3       REQUIRED)
find_package(glm         REQUIRED)
find_package(assimp      REQUIRED)
find_package(stduuid     REQUIRED)
find_package(nlohmann_json     REQUIRED)
add_executable(RTLib-Test-Test0 Include/Test0.h Src/Test0.cpp)
target_include_directories(RTLib-Test-Test0 PUBLIC Include)
target_link_libraries(RTLib-Test-Test0 PUBLIC OptiX::OptiX CUDA::cuda_driver nlohmann_json::nlohmann_json glad::glad glfw glm::glm assimp::assimp stduuid::stduuid)