add_executable(RTLib-Tools-UuidGenerator ${CMAKE_CURRENT_SOURCE_DIR}/Src/main.cpp)

target_link_libraries(RTLib-Tools-UuidGenerator PUBLIC stduuid::stduuid)

set_target_properties(RTLib-Tools-UuidGenerator PROPERTIES FOLDER RTLib/RTLib/Tools)

add_custom_target(RTLib-Tools-UuidGenerator-Test)
set(RTLIB_CORE_TYPE_OBJECTS 
	"RTLIB_TYPE_UUID_RTLIB_CORE_CONTEXT" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_BUFFER" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_IMAGE" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_TEXTURE" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_SAMPLER" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_PROGRAM" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_SHADER" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_ACCELERATION_STRUCTURE" 
	"RTLIB_TYPE_UUID_RTLIB_CORE_SHADER_TABLE" 
	"RTLIB_TYPE_UUID_RTLIB_EXT_CUDA_CUDA_CONTEXT" 
	"RTLIB_TYPE_UUID_RTLIB_EXT_CUDA_CUDA_BUFFER" 
	"RTLIB_TYPE_UUID_RTLIB_EXT_CUDA_CUDA_IMAGE" 
	"RTLIB_TYPE_UUID_RTLIB_EXT_CUDA_CUDA_TEXTURE" 
)
set(RTLIB_CORE_TYPE_OBJECTS_NUM 0)
list(LENGTH RTLIB_CORE_TYPE_OBJECTS RTLIB_CORE_TYPE_OBJECTS_NUM)
math(EXPR RTLIB_CORE_TYPE_OBJECTS_NUM "${RTLIB_CORE_TYPE_OBJECTS_NUM}-1")

add_custom_command(TARGET RTLib-Tools-UuidGenerator-Test POST_BUILD COMMAND RTLib-Tools-UuidGenerator -c 13 -o "${CMAKE_CURRENT_BINARY_DIR}/uuid.txt") 
add_dependencies(RTLib-Tools-UuidGenerator-Test RTLib-Tools-UuidGenerator)
set_target_properties(RTLib-Tools-UuidGenerator-Test PROPERTIES FOLDER RTLib/RTLib/Tools)